--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,259 @@
+@font-face {
+  font-family: "Open Sans";
+  src: url("/fonts/Open_Sans/OpenSans-Regular.ttf");
+}
 
+@font-face {
+  font-family: "Open Sans";
+  src: url("/fonts/Open_Sans/OpenSans-SemiBold.ttf");
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: "Open Sans";
+  src: url("/fonts/Open_Sans/OpenSans-SemiBoldItalic.ttf");
+  font-style: italic;
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: "Source Sans Pro";
+  src: url("/fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf");
+}
+
+
+/* Start Bold font for tests*/
+@font-face {
+  font-family: "Bevan";
+  src: url("/fonts/Source_Sans_Pro/Bevan.ttf");
+  
+}
+/*END Bold font for tests*/
 
 
 body{
-	background-color: #ffc;
+	background-color: #fff;
+  color: #000;
+	font-family: "Open Sans", sans-serif;
+  font-size: 14px;
 }
+
+h1,h2,h3 {
+  text-transform: uppercase;
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+/* Start main_menu */
+header{
+  background-color: transparent;
+  position: fixed;
+  width: 100%;
+  margin-top: 20px;
+  z-index: 999;
+}
+
+.main_menu ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.main_menu ul li {
+  display: inline-block;
+  margin-right: 22px;
+}
+
+.main_menu ul li a {
+  display: inline-block;
+  color: #f4f5f9;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  padding-top: 22px;
+  padding-bottom: 22px;
+  position: relative;
+
+
+
+}
+
+.main_menu ul li a:after {
+  content: '';
+  display: inline-block;
+  width: 0%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  border-bottom: 2px solid #e74c3c;
+
+
+    -webkit-transition: all 0.4s ease-out;
+  -moz-transition: all 0.4s ease-out;
+  -o-transition: all 0.4s ease-out;
+  transition: all 0.4s ease-out;
+}
+.main_menu ul li a:hover {
+  text-decoration: none;
+  
+}
+
+.main_menu ul li a:hover:after {
+  width: 100%;
+}
+
+/* End main_menu */
+/* Start mainscreen_section */
+.mainscreen_section{
+	padding-top: 100px;
+  background-image: url("../img/mainscreen_bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+  position: relative; 
+}
+
+.mainscreen_section:after{
+  position: absolute; 
+  top:0; 
+  left:0; 
+  height: 100%; 
+  width: 100%;
+}
+
+.mainscreen_subheading{
+  color: #f4f5f9;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+  letter-spacing: 1.2px;
+  margin-top: 120px;
+}
+
+.mainscreen_heading{
+  color: #f4f5f9;
+  font-family: "Open Sans", sans-serif;
+  font-size: 72px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 7.2px;
+
+  margin-top: 45px;
+}
+.mainscreen_text p{
+  color: #cbc6c0;
+  font-family: "Open Sans";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  margin-bottom: 60px;
+}
+
+.mainscreen_button{
+  text-transform: uppercase;
+}
+
+.mainscreen_button_block{
+  padding-bottom: 100px;
+}
+
+
+
+.title_dot{
+  height: 7px;
+  width: 7px;
+  background-color: #e74c3c;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  margin-top: 45px;
+  margin-bottom: 45px;
+}
+
+.title_dot:before, .title_dot:after{
+  content: "";
+  position: absolute;
+  width: 80px;
+  height: 2px;
+  border: 1px solid #f1ebe7;
+  top: 2px;
+}
+
+.title_dot:before{
+  right: 100%;
+  margin-right: 15px;
+}
+
+.title_dot:after{
+  left: 100%;
+  margin-left: 15px;
+}
+
+/* End mainscreen_section */
+/* Start features_section */
+.features_item_heading{
+  position: relative;
+  color: #6a6a6a;
+  font-family: "Open Sans";
+  font-size: 18px;
+  font-weight: bold;
+  letter-spacing: 1.35px;
+  padding-top: 20px;
+}
+
+.features_item_heading::after {
+    content: "";
+    width: 41px;
+    position: absolute;
+    margin: 0 auto;
+    height: 1px;
+    background: #000;
+    left: 0;
+    right: 0;
+    bottom: -10px;
+}
+
+.features_item_text{
+  padding-top: 10px;
+  font-size: 12px;
+  color: #999999;
+  font-family: "Source Sans Pro";
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 20px;
+  letter-spacing: 0.9px;
+}
+
+.features_item_icon_box{
+  position: relative;
+  height: 73px;
+  width: 73px;
+  border: 1px solid #999999;
+  margin: auto;
+}
+
+.features_item_icon{
+  position: relative;
+  height: 73px;
+  width: 73px;
+  margin: auto;
+  line-height: 73px;
+}
+
+.feutures_item_icon_block:hover .features_item_heading{
+  color: #e74c3c;
+
+}
+
+.feutures_item_icon_block:hover .features_item_icon_box{
+  border: 1px solid #e74c3c;
+  transform: rotate(135deg);
+}
+
+.feutures_item_icon_block:hover .features_item_icon{
+  transform: rotate(-135deg);
+}
+
+/* End features_section */
